# Standalone crate -- intentionally not a workspace member.
[workspace]

[package]
name = "kbd-user"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kbd-user"
path = "src/main.rs"

[dependencies]
libplinth = { path = "../libplinth" }
libinput = { path = "../libinput" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
