[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootloader_api = "0.11"
uart_16550 = "0.3"
x86_64 = "0.14"
spin = "0.9"

[features]
# Compile the in-kernel test suite; the kernel runs it and exits instead
# of booting normally. Driven by `cargo xtask test`.
tests = []
