# Standalone crate -- intentionally not a workspace member.
# The empty [workspace] table opts this package out of the parent workspace.
[workspace]

[package]
name = "rpc-user"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rpc-user"
path = "src/main.rs"

[dependencies]
libplinth = { path = "../libplinth" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 3
lto = true
